--- a/backend-express/variables.env
+++ b/backend-express/variables.env
@@ -1,1 +1,2 @@
 DB_MONGO=mongodb+srv://ofparra:9jniNDgtxBr3IZ2P@cluster0.tzesdvg.mongodb.net/db-AdministradorConjuntoCalidad
+KEYjwt=c0njunt0C4l1d4d
