--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "js-base64": "^3.7.7",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3"
   }
 }
